--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-jest": "^24.9.0",
     "detox": "^14.7.0",
     "eslint": "^6.6.0",
+    "eslint-plugin-detox": "^1.0.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
     "react-native-testing-library": "^1.11.1",
