--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/jest-native": "4.0.11",
     "@testing-library/react-native": "11.0.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "27.5.1",
+    "detox": "19.12.1",
     "eslint": "^7.32.0",
-    "jest": "^26.6.3",
+    "jest": "27.5.1",
     "metro-react-native-babel-preset": "^0.72.1",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
     "preset": "react-native",
-    "setupFilesAfterEnv": ["./jest-setup-after-env.js"]
+    "setupFilesAfterEnv": [
+      "./jest-setup-after-env.js"
+    ]
   }
 }
