--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-jest": "27.5.1",
     "detox": "19.12.1",
     "eslint": "^7.32.0",
+    "eslint-plugin-detox": "1.0.0",
     "jest": "27.5.1",
     "metro-react-native-babel-preset": "^0.72.1",
     "react-test-renderer": "18.1.0"
