Add RNTL and Jest-Native

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-native": "5.4.3",
+    "@testing-library/react-native": "12.3.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
@@ -31,6 +33,9 @@
     "typescript": "4.8.4"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "./jest-setup-after-env.js"
+    ]
   }
 }
