--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "babel-jest": "29.7.0",
+    "detox": "20.13.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "29.7.0",
     "metro-react-native-babel-preset": "0.73.10",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
