--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-jest": "29.7.0",
     "detox": "20.13.1",
     "eslint": "^8.19.0",
+    "eslint-plugin-detox": "1.0.0",
     "jest": "29.7.0",
     "metro-react-native-babel-preset": "0.73.10",
     "prettier": "^2.4.1",
