--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "e2e"
+    ],
     "setupFilesAfterEnv": [
       "./jest-setup-after-env.js"
     ]
